# CNN

./: .gitignore  CMakeLists.txt  README.md  build.sh  mnist.sh  read_dataset_images.sh  read_dataset_labels.sh
extract-data/: CMakeLists.txt  main.cpp  mnist_reader.h  utils.cpp  utils.h
include/: fc_layer.h  fc_layer_empty.h  fully_connected.h  layer.h  loss.h  mnist.h  network.h  operate_config.h  optimizer.h  param.h  relu.h  relu_layer.h  sequantial.h  sgd.h  softmax.h  softmax_layer.h  utils.h
src/: cross_entropy_los.cpp  fc_layer.cpp  fully_connected.cpp  main.cpp  mnist.cpp  network.cpp  operate_config.cpp  relu.cpp  relu_layer.cpp  sequantial.cpp  softmax_layer.cpp
